--- a/_includes/style.css
+++ b/_includes/style.css
@@ -419,8 +419,8 @@ th {
 h4,
 h5,
 h6 {
-    font-size: 16px;
-    font-weight: 400;
+    font-size: 15px;
+    font-weight: bold;
     margin-bottom: 25px;
 }
 
